# bc-on-linux-test

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  README.md  bc-on-linux-test.code-workspace  custom.ruleset.json  dotnet-tools.json
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/: copilot-instructions.md
.github/workflows/: bc-test.yml  copilot-setup-steps.yml  python-check.yml
app/: CLAUDE.md  app.json  bc-on-linux-test.code-workspace
app/src/: BCEventSource.Codeunit.al  BCNotificationDispatcher.Codeunit.al  INotificationDispatcher.Interface.al  MaxSellableCalc.Codeunit.al  MaxSellableEventBuf.Table.al  MaxSellablePBT.Codeunit.al  MaxSellableValidateHandler.Codeunit.al  SalesOrderFactBoxExt.PageExt.al  SalesReceivablesSetupExt.PageExt.al  SalesReceivablesSetupExt.TableExt.al  SmokeMath.Codeunit.al
app/src/logic/: IEventSource.Interface.al  INotificationDispatcher.Interface.al  IStockoutChecker.Interface.al  MaxSellableCalc.Codeunit.al  MaxSellableValidateHandler.Codeunit.al
app/src/seams/: AssemblyLT.Query.al  BCEventSource.Codeunit.al  BCNotificationDispatcher.Codeunit.al  BCStockoutChecker.Codeunit.al  BcLinuxSmoke.PermissionSet.al  ItemLedgerSummary.Query.al  MaxSellableEventBuf.Table.al  MaxSellableFactBox.Page.al  MaxSellablePBT.Codeunit.al  MaxSellableSubscribers.Codeunit.al  OpenSDAssemblyHeader.Query.al  OpenSDAssemblyLine.Query.al  OpenSDJobPlanning.Query.al  OpenSDProdOrderComp.Query.al  OpenSDProdOrderLine.Query.al  OpenSDPurchase.Query.al  OpenSDSales.Query.al  OpenSDService.Query.al  OpenSDTransferIn.Query.al  OpenSDTransferOut.Query.al  ProductionLT.Query.al  PurchaseReceiptLT.Query.al  SalesOrderFactBoxExt.PageExt.al  SalesRecvSetupExt.TableExt.al  SalesRecvSetupPageExt.PageExt.al  TransferLT.Query.al
docs/adr/: 0001-max-sellable-qty-inclusion-policy.md  0002-max-sellable-calc-architecture.md  0003-max-sellable-test-architecture.md  0004-perf-testing-approach.md  0005-service-level-targeting-per-abc-class.md  0006-bootstrap-ltd-shared-monte-carlo-engine.md  0007-simulator-fidelity-b-simplified-policy-replay.md  0008-hierarchical-grain-with-promotion.md  0009-python-package-with-api-and-file-seam.md  0010-per-company-silos-for-multi-company-tenants.md  0011-model-versioning-and-audit-lineage.md  0012-per-sku-forecast-and-simulation-horizon.md  0013-end-to-end-planning-pipeline-smoke.md
docs/reviewer-pack/: README.md  source.md
docs/reviewer-pack/diagrams/: 01-pipeline.mmd  02-ltd-bootstrap.mmd  (+3 more)
integration-test/: CLAUDE.md  app.json
integration-test/src/: AssemblyBCEventSourceTests.Codeunit.al  AssemblyEvtSrcTests.Codeunit.al  AssemblyLTQueryTests.Codeunit.al  BcLinuxSmokeIT.PermissionSet.al  ILESummaryQueryTests.Codeunit.al  ITNotifDispatcherStub.Codeunit.al  ITNotificationDispatcherStub.Codeunit.al  ITStockoutCheckerStub.Codeunit.al  JobPlanningBCEventSourceTests.Codeunit.al  JobPlanningEvtSrcTests.Codeunit.al  MaxSellableFactBoxTests.Codeunit.al  MaxSellableNotifIntTests.Codeunit.al  MaxSellableNotificationTests.Codeunit.al  MaxSellablePerfFixture.Codeunit.al  MaxSellablePerfStressTests.Codeunit.al  MaxSellablePerfTypical.Codeunit.al  MaxSellablePerfTypicalTests.Codeunit.al  MaxSellableSkeletonTests.Codeunit.al  OpenSDQueryTests.Codeunit.al  ProdOrderBCEventSourceTests.Codeunit.al  ProdOrderEvtSrcTests.Codeunit.al  ProductionLTQueryTests.Codeunit.al  PurchLineEvtSrcTests.Codeunit.al  PurchReceiptLTQueryTests.Codeunit.al  PurchaseLineBCEventSourceTests.Codeunit.al  PurchaseReceiptLTQueryTests.Codeunit.al  SalesLineBCEventSourceTests.Codeunit.al  SalesLineEvtSrcTests.Codeunit.al  ServiceLineBCEventSourceTests.Codeunit.al  ServiceLineEvtSrcTests.Codeunit.al  TransferLTQueryTests.Codeunit.al  TransferLineBCEventSourceTests.Codeunit.al  TransferLineEvtSrcTests.Codeunit.al
planning-optimizer/: CLAUDE.md  README.md  pyproject.toml
planning-optimizer/extracts/: bc_api.py  bc_files.py
planning-optimizer/notebooks/: walking_skeleton.ipynb
planning-optimizer/src/bc_planning_optimizer/: classifier.py  confidence.py  forecaster.py  lead_time.py  pipeline.py  recommender.py  simulator.py
planning-optimizer/tests/: conftest.py  test_assembly_lt.py  test_bootstrap_recommender.py  test_classifier.py  test_lead_time.py  test_open_sd_events.py  test_open_sd_projection.py  test_open_sd_snapshot.py  test_production_lt.py  test_purchase_receipt_lt.py  test_seeded_data_integration.py  test_simulator.py  test_transfer_lt.py  test_walking_skeleton.py
planning-optimizer/tests/fixtures/: synthetic_extract.csv  synthetic_ile_summary.csv
scripts/: _extract_assembly_lt.py  _extract_common.py  _extract_ile_summary.py  _extract_open_sd.py  _extract_production_lt.py  _extract_purchase_receipt_lt.py  _extract_transfer_lt.py  al-mcp.sh  check-python.sh  compile.sh  download-symbols.sh  extract-assembly-lt.sh  extract-ile-summary.sh  extract-open-sd.sh  extract-production-lt.sh  extract-purchase-receipt-lt.sh  extract-transfer-lt.sh  fix-tenantid.sh  mutate.sh  seed-company.sh  smoke.sh  test-fast.sh  test-integration.sh  test-mutation.sh  test-pipeline.sh  test-unit.sh
scripts/bc-linux-overrides/: docker-compose.override.yml  sql-fts.Dockerfile
seed/: CLAUDE.md  app.json
seed/src/: POSeed.PermissionSet.al  POSeedBootstrap.Codeunit.al  POSeedCompanies.Codeunit.al  POSeedConstants.Codeunit.al  POSeedDemandHistory.Codeunit.al  POSeedEndpoints.Page.al  POSeedInstall.Codeunit.al  POSeedItems.Codeunit.al  POSeedLTSamples.Codeunit.al  POSeedOpenDocuments.Codeunit.al  POSeedRegimeChange.Codeunit.al  POSeedRng.Codeunit.al  POSeedStockoutHistory.Codeunit.al  POSeedTeardown.Codeunit.al  POSeedTrigger.Table.al
test/: CLAUDE.md  app.json
test/src/: BcLinuxSmokeTests.PermissionSet.al  EventSourceStub.Codeunit.al  MaxSellableCalcTests.Codeunit.al  MaxSellableHandlerTests.Codeunit.al  MaxSellableValidateHandlerTests.Codeunit.al  NotificationDispatcherStub.Codeunit.al  SmokeMathTests.Codeunit.al  StockoutCheckerStub.Codeunit.al
